# fuzzysearch

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  dev_requirements.txt  nose2.cfg  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  test_requirements.txt  test_requirements_py26.txt  tox.ini
.github/workflows/: build.yml  ci.yml  test.yml
.travis/: py34.sh
benchmarks/: The Adventures of Huckleberry Finn.txt  __init__.py  __main__.py  book.py  dna_search.py  main.py  micro_benchmarks.py
docs/: conf.py  index.rst  installation.rst  usage.rst
fuzzysearch/: __init__.py  _common.c  _generic_search.c  _generic_search.pyx  _pymemmem.c  _substitutions_only.c  _substitutions_only_lp_template.h  _substitutions_only_ngrams_template.h  common.py  custom_search.py  fuzzysearch.py  generic_search.py  kmp.c  kmp.h  levenshtein.py  levenshtein_ngram.py  memmem.c  memmem.h  ngrams_search.py  no_deletions.py  substitutions_only.py  susbstitutions_only.py  wordlen_memmem.c  wordlen_memmem.h
src/fuzzysearch/: __init__.py  _c_ext_base.h  _common.c  _generic_search.c  _generic_search.pyx  _levenshtein_ngrams.c  _levenshtein_ngrams.pyx  memmem.c  (+15 more)
tests/: compat.py  test_common.py  test_find_near_matches.py  test_find_near_matches_in_file.py  test_fuzzysearch.py  test_generic_search.py  test_generic_search_cython.py  test_levenshtein.py  test_memmem.py  test_multi.py  test_no_deletions.py  test_search_exact.py  test_substitutions_only.py  utils.py
